--- a/src/styles.css
+++ b/src/styles.css
@@ -156,6 +156,23 @@ p{
     }
 }
 
+.project-image {
+    margin-top: 25px;
+    width: 250px;
+    border-radius: 125px;
+}
+
+hr {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.project-link {
+    text-decoration: none;
+    color: #ef744b;
+}
+
+
 a {
     text-decoration: none;
     color: white;
