--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 section {
     background-color: white;
@@ -150,7 +151,7 @@ p{
     justify-content: space-around;
 }
 
-@media only screen and (max-width: 100px) {
+@media only screen and (max-width: 1000px) {
     .project-container {
         display: flex;
         flex-wrap: wrap;
