--- a/src/styles.css
+++ b/src/styles.css
@@ -201,7 +201,7 @@ a {
     ul {
         display: none;
         background-color: #788fa8;
-        margin: 0px;
+        margin: 0ppx;
     }
 
     ul.show {
