--- a/src/styles.css
+++ b/src/styles.css
@@ -140,6 +140,7 @@ p{
 }
 
 .project-card {
+    background-color: #eee;
     width: 300px;
     height: 500px;
     box-shadow: 5px 5px 20px rgb(197, 195, 195);
@@ -159,9 +160,10 @@ p{
 }
 
 .project-image {
-    margin-top: 25px;
+    margin-bottom: 25px;
     width: 250px;
     border-radius: 125px;
+
 }
 
 hr {
@@ -171,7 +173,7 @@ hr {
 
 .project-link {
     text-decoration: none;
-    color: #ef744b;
+    color: rgb(38, 50, 160);
 }
 
 
